# TokenGo

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build-android.yml  build-desktop.yml
.trae/specs/replace-svg-with-iconlib/: checklist.md  spec.md  tasks.md
src/: App.vue  Example.vue  main.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/data/: tokengo.db
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs
src/components/: Icon.vue  Sidebar.vue
src/router/: index.js
src/styles/: safe-area.css
src/views/: AddSecret.vue  Auth.vue  Home.vue  ImportSecret.vue  Settings.vue
