[package]
name = "tokengo"
version = "0.2.0"
description = "A lightweight TOTP password manager - 轻量级双因素认证工具"
authors = ["ant-cave <ANTmmmmm@outlook.com>"]
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/ant-cave/TokenGo"
homepage = "https://github.com/ant-cave/TokenGo"

[lib]
name = "tokengo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.4"

# 数据库相关
rusqlite = { version = "0.32", features = ["bundled"] }
once_cell = "1.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
